--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,23 @@
 	<properties>
 		<junit.version>4.11</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
+		<javassist.version>3.17.1-GA</javassist.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>${javassist.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
